--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,3 +92,9 @@ jobs:
       shell: bash
       run: |
         cd build && ninja
+    - uses: actions/upload-artifact@v4
+      with: 
+        name: aseprite
+        path: |
+          C:/Users/AshenOne/Downloads/aseprite/build/bin/data
+          C:/Users/AshenOne/Downloads/aseprite/build/bin/aseprite.exe
